--- a/index.html
+++ b/index.html
@@ -5,9 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Trello clone</title>
+    <title>PSD to HTML</title>
 </head>
 <body>
-    <h1>Trello</h1>
+    <header>
+        <nav>navigation</nav>
+        <section id="hero-section">hero section</section>
+    </header>
+    <main>
+        <section id="our_story-section">our story section</section>
+        <section id="watch-section">watch section</section>
+        <section id="expertise-section">expertise section</section>
+        <section id="team-section">team section</section>
+        <section id="contact_client-section">contact / client section</section>
+    </main>
+    <footer>footer</footer>
 </body>
 </html>
