add first draft for footer

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>PSD to HTML</title>
 </head>
+
 <body>
     <header>
         <nav>navigation</nav>
@@ -19,6 +21,34 @@
         <section id="team-section">team section</section>
         <section id="contact_client-section">contact / client section</section>
     </main>
-    <footer>footer</footer>
+
+    <footer>
+        <div></div>
+        <div class="footer-left">
+            <h4>tajam</h4>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati expedita atque perferendis quasi
+                nam praesentium voluptatum ab dolorem minus magnam, quisquam cum quibusdam unde amet eaque debitis
+                cumque odio.</p>
+        </div>
+        <div class="footer-middle">
+            <h4>OUR STUDIO</h4>
+            <p>Ruko cucruk, Jl. Radio luar dalem jos No. 12 -13, Kalideres - Jakarta Barat 11480 - Indonesia</p>
+        </div>
+        <div class="footer-right">
+            <h4>STAY IN TOUCH</h4>
+            <input type="text" placeholder="Subscribe to our newsletter">
+            <div>
+                <img src="/images/design-assets/png/facebook.png" alt="facebook logo">
+                <img src="/images/design-assets/png/twitter.png" alt="twitter logo">
+                <img src="/images/design-assets/png/dribbble.png" alt="dribble logo">
+                <img src="/images/design-assets/png/instagram.png" alt="instagram logo">
+                <img src="/images/design-assets/png/gplus.png" alt="google logo">
+                <img src="/images/design-assets/png/youtube.png" alt="youtube logo">
+            </div>
+        </div>
+        <div></div>
+    </footer>
+
 </body>
+
 </html>
