--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap">
     <title>PSD to HTML</title>
+    <!-- 
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap');
+    </style>
+    -->
 </head>
 
 <body>
@@ -24,19 +33,38 @@
 
     <footer>
         <div></div>
+
         <div class="footer-left">
-            <h4>tajam</h4>
+            <div class="footer-logo">
+                <div><img src="/images/png/logo.png" alt="tajam logo"></div>
+                <div><span>tajam</span></div>
+            </div>
+            <div><img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"></div>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati expedita atque perferendis quasi
                 nam praesentium voluptatum ab dolorem minus magnam, quisquam cum quibusdam unde amet eaque debitis
                 cumque odio.</p>
         </div>
+
         <div class="footer-middle">
             <h4>OUR STUDIO</h4>
-            <p>Ruko cucruk, Jl. Radio luar dalem jos No. 12 -13, Kalideres - Jakarta Barat 11480 - Indonesia</p>
+            <div><img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"></div>
+            <div>
+                <img src="images/png/big104.png" alt="location pin symbol">
+                <span>Ruko cucruk, Jl. Radio luar dalem jos No. 12 -13, Kalideres - Jakarta Barat 11480 - Indonesia</span>
+            </div>
+            <div>
+                <img src="images/png/phone351.png" alt="phone symbol">
+                <span>(+62) 21-2224 3333</span>
+            </div>
         </div>
+
         <div class="footer-right">
             <h4>STAY IN TOUCH</h4>
-            <input type="text" placeholder="Subscribe to our newsletter">
+            <div><img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"></div>
+            <form> 
+                <input type="text" placeholder="Subscribe to our newsletter">
+                <button><img src="images/png/paper122.png" alt="paper flyer"></button>
+            </form>
             <div>
                 <img src="/images/design-assets/png/facebook.png" alt="facebook logo">
                 <img src="/images/design-assets/png/twitter.png" alt="twitter logo">
@@ -46,6 +74,7 @@
                 <img src="/images/design-assets/png/youtube.png" alt="youtube logo">
             </div>
         </div>
+
         <div></div>
     </footer>
 
