--- a/index.html
+++ b/index.html
@@ -33,48 +33,69 @@
 
     <footer>
         <div></div>
+        <div class="footer-wrapper">
 
-        <div class="footer-left">
+            <!-- left column -->
             <div class="footer-logo">
                 <div><img src="/images/png/logo.png" alt="tajam logo"></div>
                 <div><span>tajam</span></div>
             </div>
-            <div><img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"></div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati expedita atque perferendis quasi
-                nam praesentium voluptatum ab dolorem minus magnam, quisquam cum quibusdam unde amet eaque debitis
-                cumque odio.</p>
-        </div>
-
-        <div class="footer-middle">
-            <h4>OUR STUDIO</h4>
-            <div><img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"></div>
-            <div>
-                <img src="images/png/big104.png" alt="location pin symbol">
-                <span>Ruko cucruk, Jl. Radio luar dalem jos No. 12 -13, Kalideres - Jakarta Barat 11480 - Indonesia</span>
+            <div class="footer-logotext">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati expedita atque perferendis
+                    quasi
+                    nam praesentium voluptatum ab dolorem minus magnam.
+                </p>
             </div>
-            <div>
-                <img src="images/png/phone351.png" alt="phone symbol">
-                <span>(+62) 21-2224 3333</span>
+            <div class="footer-links">
+                <div>HELP</div>
+                <div>TERMS&CONDITIONS</div>
+                <div>PRIVACY</div>
             </div>
-        </div>
 
-        <div class="footer-right">
-            <h4>STAY IN TOUCH</h4>
-            <div><img src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"></div>
-            <form> 
-                <input type="text" placeholder="Subscribe to our newsletter">
-                <button><img src="images/png/paper122.png" alt="paper flyer"></button>
-            </form>
-            <div>
-                <img src="/images/design-assets/png/facebook.png" alt="facebook logo">
-                <img src="/images/design-assets/png/twitter.png" alt="twitter logo">
-                <img src="/images/design-assets/png/dribbble.png" alt="dribble logo">
-                <img src="/images/design-assets/png/instagram.png" alt="instagram logo">
-                <img src="/images/design-assets/png/gplus.png" alt="google logo">
-                <img src="/images/design-assets/png/youtube.png" alt="youtube logo">
+            <!-- middle column -->
+            <div class="footer-header1">
+                <h4>OUR STUDIO</h4>
             </div>
-        </div>
+            <div class="footer-address">
+                <div class="footer-pic">
+                    <img src="images/png/big104.png" alt="location pin symbol">
+                </div>
+                <div>Ruko cucruk, Jl. Radio luar dalem jos No. 12 -13, Kalideres - Jakarta Barat 11480 - Indonesia
+                    <p>&nbsp;</p>
+                </div>
+                <div class="footer-pic">
+                    <img src="images/png/phone351.png" alt="phone symbol">
+                </div>
+                <div>
+                    (+62) 21-2224 3333
+                </div>
+            </div>
 
+            <!-- right column -->
+            <div class="footer-header2">
+                <h4>STAY IN TOUCH</h4>
+            </div>
+            <div class="footer-social">
+                <div>
+                    <form>
+                        <input type="text" placeholder="Subscribe to our newsletter">
+                        <button><img src="images/png/paper122.png" alt="paper flyer"></button>
+                    </form>
+                </div>
+                <div>
+                    <img src="/images/design-assets/png/facebook.png" alt="facebook logo">
+                    <img src="/images/design-assets/png/twitter.png" alt="twitter logo">
+                    <img src="/images/design-assets/png/dribbble.png" alt="dribble logo">
+                    <img src="/images/design-assets/png/instagram.png" alt="instagram logo">
+                    <img src="/images/design-assets/png/gplus.png" alt="google logo">
+                    <img src="/images/design-assets/png/youtube.png" alt="youtube logo">
+                </div>
+            </div>
+            <div class="footer-copyright">
+                Copyright &copy; 2023 - Tajam Creative
+            </div>
+
+        </div>
         <div></div>
     </footer>
 
