--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;900&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap">
     <title>PSD to HTML</title>
     <!-- 
     <style>
@@ -38,24 +38,20 @@
             <!-- left column -->
             <div class="footer-logo">
                 <div><img src="/images/png/logo.png" alt="tajam logo"></div>
-                <div><span>tajam</span></div>
+                <div>tajam</div>
             </div>
             <div class="footer-logotext">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id obcaecati expedita atque perferendis
-                    quasi
-                    nam praesentium voluptatum ab dolorem minus magnam.
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In id eius ipsum accusantium necessitatibus sed illo, quidem exercitationem, amet libero deserunt quo et adipisci asperiores reiciendis!
                 </p>
             </div>
             <div class="footer-links">
-                <div>HELP</div>
-                <div>TERMS&CONDITIONS</div>
-                <div>PRIVACY</div>
+                <div><a href="#">HELP</a>&nbsp;</div>
+                <div><a href="#">TERMS &amp; CONDITIONS</a>&nbsp;</div>
+                <div><a href="#">PRIVACY</a></div>
             </div>
 
             <!-- middle column -->
-            <div class="footer-header1">
-                <h4>OUR STUDIO</h4>
-            </div>
+            <div class="footer-header1">OUR STUDIO</div>
             <div class="footer-address">
                 <div class="footer-pic">
                     <img src="images/png/big104.png" alt="location pin symbol">
@@ -73,13 +69,15 @@
 
             <!-- right column -->
             <div class="footer-header2">
-                <h4>STAY IN TOUCH</h4>
+                <span>STAY IN TOUCH</span>
             </div>
             <div class="footer-social">
                 <div>
                     <form>
-                        <input type="text" placeholder="Subscribe to our newsletter">
-                        <button><img src="images/png/paper122.png" alt="paper flyer"></button>
+                        <div class="footer-form">
+                            <input type="text" placeholder="Subscribe to our newsletter">
+                            <button><img src="images/png/paper122.png" alt="paper flyer"></button>
+                        </div>
                     </form>
                 </div>
                 <div>
