First draft for contact-client section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;700;900&display=swap">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display:wght@700&family=Roboto:wght@100;400;700;900&display=swap"
+        rel="stylesheet">
     <title>PSD to HTML</title>
 </head>
 
@@ -23,7 +25,39 @@
         <section id="watch-section">watch section</section>
         <section id="expertise-section">expertise section</section>
         <section id="team-section">team section</section>
-        <section id="contact_client-section">contact / client section</section>
+
+        <section id="contact_client-section">
+            <div class="contact_client-wrapper">
+                <div class="contact_client-content">
+                    <div class="contact_client-form">
+                        <h2>Give us good news</h2>
+                        <form class="contact_client-form">
+                            <input type="text" placeholder="Name">
+                            <input type="email" placeholder="Email">
+                            <input type="text" placeholder="Subject">
+                            <textarea rows="5" placeholder="Message"></textarea>
+                            <button>Submit</button>
+                        </form>
+                    </div>
+                    <div class="contact_client-customers">
+                        <h2>Our happy clients</h2>
+                        <div class="contact_client-logos">
+                            <img src="images/png/Zara_Logo.png" alt="Zara logo">
+                            <img src="images/png/Logo_of_Mango_(new).png" alt="Mango logo">
+                            <img src="images/png/1280px-Barneys_New_York_Logo.png" alt="Barneys logo">
+                            <img src="images/png/1280px-Gucci_Logo.png" alt="Gucci logo">
+                            <img src="images/png/Calvin_klein_logo.png" alt="Calving Klein logo">
+                            <img src="images/png/1280px-Logo_NIKE.png" alt="Nike logo">
+                            <img src="images/png/Converse_logo.png" alt="Converse logo">
+                            <img src="images/png/Puma_Logo.png" alt="Puma logo">
+                            <img src="images/png/1280px-Levi's_logo.png" alt="Levis logo">
+                            <img src="images/png/Billabong.png" alt="Billabong logo">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <footer>
@@ -36,7 +70,8 @@
                 <div>tajam</div>
             </div>
             <div class="footer-logotext">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In id eius ipsum accusantium necessitatibus sed illo, quidem exercitationem, amet libero deserunt quo et adipisci asperiores reiciendis!
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In id eius ipsum accusantium necessitatibus
+                    sed illo, quidem exercitationem, amet libero deserunt quo et adipisci asperiores reiciendis!
                 </p>
             </div>
             <div class="footer-links">
