fix path to logo and social images

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
             <!-- left column -->
             <div class="footer-logo">
-                <div><img src="/images/png/logo.png" alt="tajam logo"></div>
+                <div><img src="images/png/logo.png" alt="tajam logo"></div>
                 <div>tajam</div>
             </div>
             <div class="footer-logotext">
@@ -111,12 +111,12 @@
                     </form>
                 </div>
                 <div>
-                    <img src="/images/design-assets/png/facebook.png" alt="facebook logo">
-                    <img src="/images/design-assets/png/twitter.png" alt="twitter logo">
-                    <img src="/images/design-assets/png/dribbble.png" alt="dribble logo">
-                    <img src="/images/design-assets/png/instagram.png" alt="instagram logo">
-                    <img src="/images/design-assets/png/gplus.png" alt="google logo">
-                    <img src="/images/design-assets/png/youtube.png" alt="youtube logo">
+                    <img src="images/png/facebook.png" alt="facebook logo">
+                    <img src="images/png/twitter.png" alt="twitter logo">
+                    <img src="images/png/dribbble.png" alt="dribble logo">
+                    <img src="images/png/instagram.png" alt="instagram logo">
+                    <img src="images/png/gplus.png" alt="google logo">
+                    <img src="images/png/youtube.png" alt="youtube logo">
                 </div>
             </div>
             <div class="footer-copyright">
