first draft team section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
-        href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display:wght@700&family=Roboto:wght@100;400;700;900&display=swap"
+        href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display:wght@400;700&family=Roboto:wght@100;400;700;900&display=swap"
         rel="stylesheet">
     <title>PSD to HTML</title>
 </head>
@@ -24,7 +24,41 @@
         <section id="our_story-section">our story section</section>
         <section id="watch-section">watch section</section>
         <section id="expertise-section">expertise section</section>
-        <section id="team-section">team section</section>
+
+        <section id="team-section">
+            <h2 class="headers">Meet our amazing team</h2>
+            <h3 class="headers">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, nisi!</h3>
+            <div class="team-wrapper">
+                <div class="team-members">
+                    <div class="team-member team-member1">
+                        <div class="team-placeholder"></div>
+                        <h4>Semf Ucuk</h4>
+                        <p>CEO &amp; Founder</p>
+                    </div>
+                    <div class="team-member team-member2">
+                        <div class="team-placeholder"></div>
+                        <h4>Dik Adalin</h4>
+                        <p>Engineering</p>
+                    </div>
+                    <div class="team-member team-member3">
+                        <div class="team-placeholder"></div>
+                        <h4>Jeng Kol</h4>
+                        <p>Designer</p>
+                    </div>
+                    <div class="team-member team-member4">
+                        <div class="team-placeholder"></div>
+                        <div class="team-names">
+                            <h4>Pet Romak</h4>
+                            <p>Marketing</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="team-join">Become part of our dream team! Join us!</div>
+            <form>
+                <button>We are hiring</button>
+            </form>
+        </section>
 
         <section id="contact_client-section">
             <div class="contact_client-wrapper">
