--- a/index.html
+++ b/index.html
@@ -1,24 +1,125 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>PSD to HTML</title>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style.css" />
+  <title>Document</title>
 </head>
+
 <body>
-    <header>
-        <nav>navigation</nav>
-        <section id="hero-section">hero section</section>
-    </header>
-    <main>
-        <section id="our_story-section">our story section</section>
-        <section id="watch-section">watch section</section>
-        <section id="expertise-section">expertise section</section>
-        <section id="team-section">team section</section>
-        <section id="contact_client-section">contact / client section</section>
-    </main>
-    <footer>footer</footer>
+  <header>
+    <nav></nav>
+    <section></section>
+  </header>
+  <main>
+    <section class="container">
+      <div class="story-image">
+        <img src="images/logo-big.png"/>
+      </div>
+      <!--Story Section (Priya)-->
+      <div class="story">
+        <div class="content">
+          <h3>OUR STORY</h3>
+          <p>
+            This is Photoshop's version of Lorem Ipsum. Proin gravida nibh
+            vel velit auctor aliquet. Aenean sollicitudin, lorem quis
+            bibendum auctor, nisi elit consequat ipsum, nec sagittis sem
+            nibh id elit. Duis sed odio sit amet nibh vulputate cursus
+          </p>
+          <p>
+            Morbi accumsan ipsum velit. Nam nec tellus a odio tincidunt
+            auctor a ornare odio. Sed non mauris vitae erat consequat auctor
+            eu in elit. Class aptent taciti sociosqu ad litora torquent per
+            conubia nostra, per inceptos himenaeos.
+          </p>
+          <br />
+          <div class="button">
+            <button>LEARN MORE</button>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Watch Our Story Section(Priya)-->
+    <section class="container2">
+      <div class="bg-image">
+        <div class="watch-story">
+          <div class="video-image">
+            <img src="images/play.png" />
+          </div>
+          <div class="heading">
+            <h6>WATCH OUR STORY</h6>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--Expertise Section(Priya)-->
+    <section id="our-expertise">
+      <h3>EXPERTISE</h3>
+      <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
+
+      <hr color="lightgray" width="4%" size="1px" />
+
+      <div class="grid-wrapper">
+        <div class="item">
+          <img src="images/screen.png" />
+          <h5>WEB DESIGN & DEVELOPMENT</h5>
+          <p>
+            This is Photoshop's version of lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean
+          </p>
+        </div>
+
+        <div class="item">
+          <img src="images/pen.png" />
+          <h5>BRAND IDENTITY</h5>
+          <p>
+            This is Photoshop's version of lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean
+          </p>
+        </div>
+
+        <div class="item">
+          <img src="images/mobile.png" />
+          <h5>MOBILE APP</h5>
+          <p>
+            This is Photoshop's version of lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean
+          </p>
+        </div>
+
+        <div class="item">
+          <img src="images/graph.png" />
+          <h5>SEARCH ENGINE OPTIMIZATION</h5>
+          <p>
+            This is Photoshop's version of lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean
+          </p>
+        </div>
+
+        <div class="item">
+          <img src="images/gameboy.png" />
+          <h5>GAME DEVELOPMENT</h5>
+          <p>
+            This is Photoshop's version of lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean
+          </p>
+        </div>
+        <div class="item">
+          <img src="images/heart.png" />
+          <h5>MADE WITH LOVE</h5>
+          <p>
+            This is Photoshop's version of lorem Ipsum. Proin gravida nibh vel
+            velit auctor aliquet Aenean
+          </p>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer></footer>
 </body>
+
 </html>
