final styling for team section

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display:wght@400;700&family=Roboto:wght@100;400;700;900&display=swap">
+        href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display:wght@400;700&family=Roboto:wght@100;300;400;700;900&display=swap">
     <title>PSD to HTML</title>
 </head>
 
@@ -126,25 +126,26 @@
         <section id="team-section">
             <h2 class="headers">Meet our amazing team</h2>
             <h3 class="headers">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, nisi!</h3>
+            <hr class="team-style">
             <div class="team-wrapper">
                 <div class="team-members">
                     <div class="team-member team-member1">
-                        <div class="team-placeholder"></div>
+                        <img src="https://via.placeholder.com/220x230/ffffff/ffffff" alt="placeholder team image">
                         <h4>Semf Ucuk</h4>
                         <p>CEO &amp; Founder</p>
                     </div>
                     <div class="team-member team-member2">
-                        <div class="team-placeholder"></div>
+                        <img src="https://via.placeholder.com/220x230/ffffff/ffffff" alt="placeholder team image">
                         <h4>Dik Adalin</h4>
                         <p>Engineering</p>
                     </div>
                     <div class="team-member team-member3">
-                        <div class="team-placeholder"></div>
+                        <img src="https://via.placeholder.com/220x230/ffffff/ffffff" alt="placeholder team image">
                         <h4>Jeng Kol</h4>
                         <p>Designer</p>
                     </div>
                     <div class="team-member team-member4">
-                        <div class="team-placeholder"></div>
+                        <img src="https://via.placeholder.com/220x230/ffffff/ffffff" alt="placeholder team image">
                         <div class="team-names">
                             <h4>Pet Romak</h4>
                             <p>Marketing</p>
@@ -153,7 +154,7 @@
                 </div>
             </div>
             <div class="team-join">Become part of our dream team! Join us!</div>
-            <form>
+            <form class="contact_client-form">
                 <button>We are hiring</button>
             </form>
         </section>
