reset font-family and size

--- a/index.html
+++ b/index.html
@@ -117,7 +117,140 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+          <!--Team Section(Anja)-->
+
+    <section id="team-section">
+      <h2 class="headers">Meet our amazing team</h2>
+      <h3 class="headers">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat, nisi!</h3>
+      <hr class="team-style">
+      <div class="team-wrapper">
+        <div class="team-members">
+          <div class="team-member team-member1">
+            <img src="https://via.placeholder.com/220x230/ffffff/ffffff" alt="placeholder team image">
+            <h4>Semf Ucuk</h4>
+            <p>CEO &amp; Founder</p>
+          </div>
+          <div class="team-member team-member2">
+            <img src="https://via.placeholder.com/220x230/ffffff/ffffff" alt="placeholder team image">
+            <h4>Dik Adalin</h4>
+            <p>Engineering</p>
+          </div>
+          <div class="team-member team-member3">
+            <img src="https://via.placeholder.com/220x230/ffffff/ffffff" alt="placeholder team image">
+            <h4>Jeng Kol</h4>
+            <p>Designer</p>
+          </div>
+          <div class="team-member team-member4">
+            <img src="https://via.placeholder.com/220x230/ffffff/ffffff" alt="placeholder team image">
+            <div class="team-names">
+              <h4>Pet Romak</h4>
+              <p>Marketing</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="team-join">Become part of our dream team! Join us!</div>
+      <form class="contact_client-form">
+        <button>We are hiring</button>
+      </form>
+    </section>
+
+    <section id="contact_client-section">
+      <div class="contact_client-wrapper">
+        <div class="contact_client-content">
+          <div class="contact_client-form">
+            <h2>Give us good news</h2>
+            <form class="contact_client-form">
+              <input type="text" placeholder="Name">
+              <input type="email" placeholder="Email">
+              <input type="text" placeholder="Subject">
+              <textarea rows="5" placeholder="Message"></textarea>
+              <button>Submit</button>
+            </form>
+          </div>
+          <div class="contact_client-customers">
+            <h2>Our happy clients</h2>
+            <div class="contact_client-logos">
+              <img src="images/png/Zara_Logo.png" alt="Zara logo">
+              <img src="images/png/Logo_of_Mango_(new).png" alt="Mango logo">
+              <img src="images/png/1280px-Barneys_New_York_Logo.png" alt="Barneys logo">
+              <img src="images/png/Logo_of_Mango_(new).png" alt="Mango logo">
+              <img src="images/png/1280px-Barneys_New_York_Logo.png" alt="Barneys logo">
+              <img src="images/png/1280px-Gucci_Logo.png" alt="Gucci logo">
+              <img src="images/png/Calvin_klein_logo.png" alt="Calving Klein logo">
+              <img src="images/png/1280px-Logo_NIKE.png" alt="Nike logo">
+              <img src="images/png/Converse_logo.png" alt="Converse logo">
+              <img src="images/png/Puma_Logo.png" alt="Puma logo">
+              <img src="images/png/1280px-Levi's_logo.png" alt="Levis logo">
+              <img src="images/png/Billabong.png" alt="Billabong logo">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer>
+    <div></div>
+    <div class="footer-wrapper">
+      <!-- left column -->
+      <div class="footer-logo">
+        <div><img src="images/png/logo.png" alt="tajam logo"></div>
+        <div>tajam</div>
+      </div>
+      <div class="footer-logotext">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. In id eius ipsum accusantium necessitatibus
+          sed illo, quidem exercitationem, amet libero deserunt quo et adipisci asperiores reiciendis!
+        </p>
+      </div>
+      <div class="footer-links">
+        <div><a href="#">HELP</a>&nbsp;</div>
+        <div><a href="#">TERMS &amp; CONDITIONS</a>&nbsp;</div>
+        <div><a href="#">PRIVACY</a></div>
+      </div>
+      <!-- middle column -->
+      <div class="footer-header1">OUR STUDIO</div>
+      <div class="footer-address">
+        <div class="footer-pic">
+          <img src="images/png/big104.png" alt="location pin symbol">
+        </div>
+        <div>Ruko cucruk, Jl. Radio luar dalem jos No. 12 -13, Kalideres - Jakarta Barat 11480 - Indonesia
+          <p>&nbsp;</p>
+        </div>
+        <div class="footer-pic">
+          <img src="images/png/phone351.png" alt="phone symbol">
+        </div>
+        <div>
+          (+62) 21-2224 3333
+        </div>
+      </div>
+      <!-- right column -->
+      <div class="footer-header2">
+        <span>STAY IN TOUCH</span>
+      </div>
+      <div class="footer-social">
+        <div>
+          <form>
+            <div class="footer-form">
+              <input type="text" placeholder="Subscribe to our newsletter">
+              <button><img src="images/png/paper122.png" alt="paper flyer"></button>
+            </div>
+          </form>
+        </div>
+        <div>
+          <img src="images/png/facebook.png" alt="facebook logo">
+          <img src="images/png/twitter.png" alt="twitter logo">
+          <img src="images/png/dribbble.png" alt="dribble logo">
+          <img src="images/png/instagram.png" alt="instagram logo">
+          <img src="images/png/gplus.png" alt="google logo">
+          <img src="images/png/youtube.png" alt="youtube logo">
+        </div>
+      </div>
+      <div class="footer-copyright">
+        Copyright &copy; 2023 - Tajam Creative
+      </div>
+    </div>
+    </div>
+  </footer>
 </body>
 
 </html>
