--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display:wght@400;700&family=Roboto:wght@100;300;400;700;900&display=swap"
     />
-    <title>PSD to HTML</title>
+    <title>Tajam</title>
   </head>
 
   <body>
