--- a/index.html
+++ b/index.html
@@ -17,11 +17,42 @@
 
   <body>
     <header>
-      <nav>navigation</nav>
-      <section id="hero-section">hero section</section>
+      <nav>
+        <div class="nav-logo">
+          <div class="logo">
+            <img src="images/png/logo.png" alt="logo" />
+          </div>
+          <div class="text-logo">tajam</div>
+        </div>
+
+        <div class="nav-menu">
+          <ul>
+            <li><a href="#hero-section">home</a></li>
+            <li><a href="#our_story-section">about</a></li>
+            <li><a href="#expertise-section">expertise</a></li>
+            <li><a href="#team-section">teams</a></li>
+            <li><a href="#contact_client-section">works</a></li>
+            <li><a href="#contact_client-section">people say</a></li>
+            <li><a href="#contact_client-section">contact</a></li>
+          </ul>
+        </div>
+      </nav>
+
+      <section id="hero-section">
+        <h1>We Are Awesome Creative Agency</h1>
+        <div class="small-line"></div>
+        <p>
+          This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
+          velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor,
+          nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed
+          odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan
+          ipsum velit.
+        </p>
+        <button>LEARN MORE</button>
+      </section>
     </header>
     <main>
-      <section class="container">
+      <section class="container" id="our_story-section">
         <div class="story-image">
           <img src="images/logo-big.png" />
         </div>
@@ -49,7 +80,7 @@
         </div>
       </section>
       <!--Watch Our Story Section(Priya)-->
-      <section class="container2">
+      <section class="container2" id="expertise-section">
         <div class="bg-image">
           <div class="watch-story">
             <div class="video-image">
