latest changes in story and expertise section

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
+    <!--<link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Playfair+Display:wght@400;700&family=Roboto:wght@100;300;400;700;900&display=swap"
-    />
+    /> -->
     <title>Tajam</title>
   </head>
 
@@ -60,7 +60,7 @@
         <!--Story Section (Priya)-->
         <div class="story">
           <div class="content">
-            <h3>OUR STORY</h3>
+            <h2>OUR STORY</h2>
             <p>
               This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel
               velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
@@ -95,7 +95,7 @@
       </section>
       <!--Expertise Section(Priya)-->
       <section id="our-expertise">
-        <h3>EXPERTISE</h3>
+        <h2>EXPERTISE</h2>
         <p>Lorem ipsum dolor sit amet proin gravida nibh vel velit</p>
 
         <hr color="lightgray" width="4%" size="1px" />
@@ -103,7 +103,7 @@
         <div class="grid-wrapper">
           <div class="item">
             <img src="images/screen.png" />
-            <h5>WEB DESIGN & DEVELOPMENT</h5>
+            <h5>WEB DESIGN & DEVELOPMENT</h6>
             <p>
               This is Photoshop's version of lorem Ipsum. Proin gravida nibh vel
               velit auctor aliquet Aenean
