updated team pics

--- a/index.html
+++ b/index.html
@@ -166,32 +166,32 @@
           <div class="team-members">
             <div class="team-member team-member1">
               <img
-                src="https://via.placeholder.com/220x230/ffffff/ffffff"
-                alt="placeholder team image"
+                src="https://i.pravatar.cc/300?u=Semf@pravatar.com"
+                alt="Semf Ucuk picture"
               />
               <h4>Semf Ucuk</h4>
               <p>CEO &amp; Founder</p>
             </div>
             <div class="team-member team-member2">
               <img
-                src="https://via.placeholder.com/220x230/ffffff/ffffff"
-                alt="placeholder team image"
+                src="https://i.pravatar.cc/300?u=Dik@pravatar.com"
+                alt="Dik Adalin picture"
               />
               <h4>Dik Adalin</h4>
               <p>Engineering</p>
             </div>
             <div class="team-member team-member3">
               <img
-                src="https://via.placeholder.com/220x230/ffffff/ffffff"
-                alt="placeholder team image"
+                src="https://i.pravatar.cc/300?u=Jeng@pravatar.com"
+                alt="Jeng Kol picture"
               />
               <h4>Jeng Kol</h4>
               <p>Designer</p>
             </div>
             <div class="team-member team-member4">
               <img
-                src="https://via.placeholder.com/220x230/ffffff/ffffff"
-                alt="placeholder team image"
+                src="https://i.pravatar.cc/300?u=Pet@pravatar.com"
+                alt="Pet Romak picture"
               />
               <div class="team-names">
                 <h4>Pet Romak</h4>
