removed team pics for anja

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="team-members">
             <div class="team-member team-member1">
               <img
-                src="https://i.pravatar.cc/300?u=Semf@pravatar.com"
+                src="https://via.placeholder.com/220x230/ffffff/ffffff""
                 alt="Semf Ucuk picture"
               />
               <h4>Semf Ucuk</h4>
@@ -174,7 +174,7 @@
             </div>
             <div class="team-member team-member2">
               <img
-                src="https://i.pravatar.cc/300?u=Dik@pravatar.com"
+                src="https://via.placeholder.com/220x230/ffffff/ffffff""
                 alt="Dik Adalin picture"
               />
               <h4>Dik Adalin</h4>
@@ -182,7 +182,7 @@
             </div>
             <div class="team-member team-member3">
               <img
-                src="https://i.pravatar.cc/300?u=Jeng@pravatar.com"
+                src="https://via.placeholder.com/220x230/ffffff/ffffff""
                 alt="Jeng Kol picture"
               />
               <h4>Jeng Kol</h4>
@@ -190,7 +190,7 @@
             </div>
             <div class="team-member team-member4">
               <img
-                src="https://i.pravatar.cc/300?u=Pet@pravatar.com"
+                src="https://via.placeholder.com/220x230/ffffff/ffffff""
                 alt="Pet Romak picture"
               />
               <div class="team-names">
