made logo clickable

--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
 
   <body>
     <header>
-      <nav>
-        <div class="nav-logo">
+      <nav id="nav-section">
+        <a href="#nav-section">
+          <div class="nav-logo">
           <div class="logo">
             <img src="images/png/logo.png" alt="logo" />
           </div>
           <div class="text-logo">tajam</div>
-        </div>
+          </div>
+        </a>
 
         <div class="nav-menu">
           <ul>
-            <li><a href="#hero-section">home</a></li>
-            <li><a href="#our_story-section">about</a></li>
+            <li><a href="#nav-section">home</a></li>
+            <li><a href="#hero-section">about</a></li>
             <li><a href="#expertise-section">expertise</a></li>
             <li><a href="#team-section">teams</a></li>
             <li><a href="#contact_client-section">works</a></li>
